design register page

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ button a {
 }
 
 
-.places-photo-size {
+.home-photo-size {
     /* width: 550px;
     height: 250px; */
     border-top-left-radius: 40px;
